# egci_bioacoustic_shifts

./: .gitignore  README.md  __init__.py  data_augmentation.ipynb  e1_pred_foc_sou.py  e1_results.json  e2_linear_reg_loss.py  e2_reintepert.ipynb  e3_data_augmentation.py  e3_pre_experiment.py  experiment1_test.ipynb  loss_experiment.ipynb  pyproject.toml  utils.py
egci_bioacoustic_shifts/: __init__.py  utils.py
