[project]
name = "egci-bioacoustic-shifts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "audiomentations>=0.40.0",
    "datasets>=3.5.1,<4.0.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.6",
    "librosa>=0.10.2.post1",
    "matplotlib>=3.10.3",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "pyha-analyzer",
    "playsound3>=3.2.4",
    "pyrootutils>=1.0.4",
    "soundfile>=0.13.1",
    "timm>=1.0.15",
    "torchmetrics>=1.7.1",
    "transformers[torch]>=4.51.3",
    "wandb>=0.19.10",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "scikit-image>=0.25.2",
    "tensorflow>=2.19.0",
    "tensorflow-hub>=0.16.1",
    "perch>=0.0.9",
    "plotly>=6.2.0",
]

[tool.setuptools]
packages = ["egci_bioacoustic_shifts"]

[project.optional-dependencies]
cpu = [
  "torch>=2.7.0",
  "torchvision>=0.22.0",
]
cu128 = [
  "torch>=2.7.0",
  "torchvision>=0.22.0",
]
cu126 = [
  "torch>=2.7.0",
  "torchvision>=0.22.0",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu128" },
    { extra = "cu126" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128" },
  { index = "pytorch-cu126", extra = "cu126" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128" },
  { index = "pytorch-cu126", extra = "cu126" },
]
lapjv = { git = "https://github.com/src-d/lapjv" }
pyha-analyzer = { path = "pyha-analyzer-2.0" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
